# course-related

./: .travis.yml  README.md
cmpe250-algorithms-and-data-structures/discrete-event-simulation-coffeeshop/: Barista.cpp  Barista.h  CMakeLists.txt  Cashier.cpp  Cashier.h  Customer.cpp  Customer.h  DivSystem.cpp  DivSystem.h  Event.cpp  Event.h  README.md  System.cpp  System.h  main.cpp
cmpe260-programming-languages/prolog-database/: README.md  Solution.pl  example_database.pl
cmpe260-programming-languages/scheme-database/: README.md  db.rkt  solution.rkt
cmpe321-intro-to-database/basic-database-manager/: ddl.py  dml.py  storageManager.py  storage_manager.py
cmpe321-intro-to-database/flask-crud/: example_db.py  init_db.py  manage_sota.py  queries.py
cmpe321-intro-to-database/flask-crud/templates/: admin_authors.html  admin_papers.html  admin_topics.html  authors.html  home.html  land.html  papers.html  rankings.html  search_keyword.html  sota.html  topics.html
csc373-algorithms-and-complexity/: DP.py  basic_algorithms.py  data_structures.py  decode.py  divide_and_conquer.py  fibonacci_Rec.py  greedy.py  knn_implementation.py  line_fitter.py
csc384-intro-to-AI/: README.md
csc384-intro-to-AI/constraint-satisfaction/: backtracking.py  constraints.py  csp_problems.py
csc384-intro-to-AI/hiddenmarkov/: bustersAgents.py  inference.py
csc384-intro-to-AI/pacman/search/: search.py  (+1 more)
csc411-machine-learning/: decision-tree.py
ie256-statistics/betting-data-analysis/: README.md  matches.csv  odds.csv  part1.R  part2.R  part3.R
practice-app/: requirements.txt
(+1 files in other folders)
